[package]
name = "energy-factory-mock"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.energy-query]
path = "../common-modules/energy-query"

[dependencies.multiversx-sc]
version = "=0.53.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "9df990a"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.2"
